2009-12-16 Borut Razem <borut.razem AT siol.net>

	* as/link/lkihx.c,
	  as/link/z80/Makefile.in, as/link/z80/linkz80.dsp,
	  as/link/z80/linkgbz80.dsp,
	  as/link/mcs51/Makefile.in, as/link/mcs51/aslink.dsp,
	  as/link/hc08/Makefile.in, as/link/hc08/link_hc08.dsp,
	  as/link/z80/lkihx.c, as/link/hc08/lkihx.c
	  as/link/mcs51/lkihx.c: unification of lkihx.c

2009-12-14 Raphael Neider <rneider AT web.de>

	* device/include/pic16/pic16devices.txt:
	  mask _XINST for 18f97j60 family, fix configword locations
	* device/include/pic16/pic18f24j50.h,
	  device/include/pic16/pic18f25j50.h,
	  device/include/pic16/pic18f44j50.h,
	  device/include/pic16/pic18f45j50.h,
	  device/include/pic16/pic18f46j50.h,
	  device/include/pic16/pic18f66j60.h,
	  device/include/pic16/pic18f66j65.h,
	  device/include/pic16/pic18f67j60.h,
	  device/include/pic16/pic18f86j60.h,
	  device/include/pic16/pic18f86j65.h,
	  device/include/pic16/pic18f87j60.h,
	  device/include/pic16/pic18f96j60.h,
	  device/include/pic16/pic18f96j65.h,
	  device/include/pic16/pic18f97j60.h:
	  add symbolic addresses to configuration bits
	* device/include/pic16/pic18fregs.h: add __CONFIG() macro

2009-12-14 Borut Razem <borut.razem AT siol.net>

	* src/SDCCmain.c: fixed crashing if -o option is not defined,
	  bug #2913769: sdcc crashes on cygwin
	* as/link/lkgb.c, as/link/z80/lkihx.c, as/link/lkrloc.c,
	  as/link/z80/Makefile.in, as/link/z80/linkz80.dsp,
	  as/link/z80/linkgbz80.dsp,
	  as/link/mcs51/Makefile.in, as/link/mcs51/aslink.dsp,
	  as/link/hc08/Makefile.in, as/link/hc08/link_hc08.dsp,
	  as/link/z80/lkrloc.c, as/link/hc08/lkrloc.c
	  as/link/mcs51/lkrloc.c: 
	  unification of lkrloc.c

2009-12-13 Borut Razem <borut.razem AT siol.net>

	* as/link/aslink.h. as/link/lksym.c, as/link/lkstore.c:
	  StrStore() replaced with strsto(), removed as/link/lkstore.c
	* as/link/lkgb.c, as/link/lkgg.c, as/link/z80/lkgb.c,
	  as/link/z80/lkgg.c, as/link/z80/Makefile.in,